[gd_scene load_steps=21 format=3 uid="uid://chr5bevsujhv3"]

[ext_resource type="Script" path="res://scripts/levels/level1.gd" id="1_6ep8p"]
[ext_resource type="Texture2D" uid="uid://c45uqyeb75ss" path="res://assets/images/backgrounds/static/level1/background.png" id="2_3sce4"]
[ext_resource type="PackedScene" uid="uid://cthtatigjtayw" path="res://scenes/ui/hud.tscn" id="2_4qkmj"]
[ext_resource type="PackedScene" uid="uid://uudjketa5htn" path="res://scenes/ui/ui.tscn" id="2_poswv"]
[ext_resource type="Texture2D" uid="uid://cpg44r04prrof" path="res://assets/images/backgrounds/static/level1/mountain.png" id="3_kkqn6"]
[ext_resource type="Texture2D" uid="uid://ddn07q3rc62cq" path="res://assets/images/backgrounds/animated/level1/lower_lake.png" id="4_1cvxu"]
[ext_resource type="Texture2D" uid="uid://cog65y5eg825r" path="res://assets/images/backgrounds/static/level1/earth.png" id="4_071ry"]
[ext_resource type="Texture2D" uid="uid://cwspg5d113fjg" path="res://assets/images/backgrounds/static/level1/building_back.png" id="5_ogysp"]
[ext_resource type="Texture2D" uid="uid://dla6ddusm46sw" path="res://assets/images/backgrounds/static/level1/turbine_back.png" id="6_y4w0b"]
[ext_resource type="Texture2D" uid="uid://bxdxnhv72ffuv" path="res://assets/images/backgrounds/static/level1/turbine_mid.png" id="8_nedcu"]
[ext_resource type="Texture2D" uid="uid://der8a2j5srmvl" path="res://assets/images/backgrounds/static/level1/turbine_front.png" id="10_krriv"]
[ext_resource type="Texture2D" uid="uid://ddscp1o0fyksp" path="res://assets/images/backgrounds/animated/level1/pipe_off.png" id="10_mao7b"]
[ext_resource type="Texture2D" uid="uid://cch6edcebhkus" path="res://assets/images/backgrounds/static/level1/building_front.png" id="11_dco3t"]
[ext_resource type="Texture2D" uid="uid://ci3hxu27wqv7t" path="res://assets/images/backgrounds/animated/level1/cloud1.png" id="13_y3uam"]
[ext_resource type="Texture2D" uid="uid://cv12kc7irmsfu" path="res://assets/images/backgrounds/animated/level1/cloud2.png" id="14_8dbsm"]
[ext_resource type="SpriteFrames" uid="uid://bwoqyqbleq7qq" path="res://assets/images/backgrounds/animated/level1/turbine_back.tres" id="14_ballj"]
[ext_resource type="Texture2D" uid="uid://co4ggqwy4lclj" path="res://assets/images/backgrounds/animated/level1/cloud3.png" id="15_bf0a7"]
[ext_resource type="SpriteFrames" uid="uid://872xxwkx1e66" path="res://assets/images/backgrounds/animated/level1/turbine_front.tres" id="16_e5dbj"]
[ext_resource type="Texture2D" uid="uid://b12o7ewf3c1et" path="res://assets/images/backgrounds/animated/level1/upper_lake.png" id="16_f7w3m"]
[ext_resource type="Texture2D" uid="uid://b7hmv8odoseik" path="res://assets/images/sprites/tutorial_player_level1.svg" id="20_ek11l"]

[node name="Level1_1p" type="Node2D"]
script = ExtResource("1_6ep8p")

[node name="HUD" parent="." instance=ExtResource("2_4qkmj")]

[node name="UI" parent="." instance=ExtResource("2_poswv")]

[node name="Player1UI" type="Sprite2D" parent="."]

[node name="Background" type="Sprite2D" parent="Player1UI"]
position = Vector2(1920, 1080)
texture = ExtResource("2_3sce4")

[node name="Cloud" type="Sprite2D" parent="Player1UI"]

[node name="Cloud1" type="Sprite2D" parent="Player1UI/Cloud"]
position = Vector2(2725, 464)
texture = ExtResource("13_y3uam")

[node name="Cloud2" type="Sprite2D" parent="Player1UI/Cloud"]
position = Vector2(2132, 166)
texture = ExtResource("14_8dbsm")

[node name="Cloud3" type="Sprite2D" parent="Player1UI/Cloud"]
position = Vector2(3511, 522)
texture = ExtResource("15_bf0a7")

[node name="Mountain" type="Sprite2D" parent="Player1UI"]
position = Vector2(1900, 1343)
texture = ExtResource("3_kkqn6")

[node name="LowerLake" type="Sprite2D" parent="Player1UI"]
position = Vector2(3126, 2020)
texture = ExtResource("4_1cvxu")

[node name="UpperLake" type="Sprite2D" parent="Player1UI"]
position = Vector2(631, 694)
texture = ExtResource("16_f7w3m")

[node name="Earth" type="Sprite2D" parent="Player1UI"]
position = Vector2(1154.78, 1122.15)
texture = ExtResource("4_071ry")

[node name="PipeOff" type="Sprite2D" parent="Player1UI"]
position = Vector2(1763.99, 928)
texture = ExtResource("10_mao7b")

[node name="BuildingBack" type="Sprite2D" parent="Player1UI"]
position = Vector2(2372.99, 1336.54)
texture = ExtResource("5_ogysp")

[node name="TurbineBack" type="Sprite2D" parent="Player1UI"]
position = Vector2(2572.99, 1326.54)
texture = ExtResource("6_y4w0b")

[node name="TurbineBackRotate" type="AnimatedSprite2D" parent="Player1UI"]
position = Vector2(2449.21, 1327.04)
scale = Vector2(1.04537, 1.04537)
sprite_frames = ExtResource("14_ballj")
animation = &"rotate"
frame_progress = 0.0994634
speed_scale = -2.0

[node name="TurbineMid" type="Sprite2D" parent="Player1UI"]
position = Vector2(2334.99, 1330.54)
texture = ExtResource("8_nedcu")

[node name="TurbineFrontRotate" type="AnimatedSprite2D" parent="Player1UI"]
position = Vector2(2137.99, 1389.54)
scale = Vector2(0.335648, 0.335648)
sprite_frames = ExtResource("16_e5dbj")
animation = &"rotate"
speed_scale = -2.0

[node name="TurbineFront" type="Sprite2D" parent="Player1UI"]
position = Vector2(2135.99, 1410.54)
scale = Vector2(0.992977, 1)
texture = ExtResource("10_krriv")

[node name="BuildingFront" type="Sprite2D" parent="Player1UI"]
visible = false
position = Vector2(2372.55, 1316.1)
texture = ExtResource("11_dco3t")

[node name="TutorialMimicPlayer" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 1500)
scale = Vector2(1.3, 1.3)
texture = ExtResource("20_ek11l")

[node name="TutorialMimicPlayer2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1900, 1500)
scale = Vector2(1.3, 1.3)
texture = ExtResource("20_ek11l")
